@startuml
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

table( client )
{
    primary_key( id ): UUID <<PK>>
    column( name ): VARCHAR
    column( email ): VARCHAR
    column( password ): TEXT
}


table( connection )
{
    primary_key( client-connect ):  <<PK>>
    foreign_key( client ): INT <<FK>>
    foreign_key( connect ): INT <<FK>>
}


table( authority )
{
    primary_key( id ): UUID <<PK>>
    column( name ): VARCHAR
}


table( role )
{
    primary_key( client-authority ) <<PK>>
    foreign_key( client ): INT <<FK>>
    foreign_key( authority ): INT <<FK>>
}

table( account )
{
    primary_key( id ): UUID <<PK>>
    column(banlance):DECIMAL
    foreign_key( client ):      INT <<FK>>
}


table( transaction )
{
    primary_key( id ): UUID <<PK>>
    column( moment ):TIMESTAMP
    column( amount ):DECIMAL
    column( description ):VARCHAR
    foreign_key( payer ):       INT <<FK>>
    foreign_key( recipient ):   INT <<FK>>
}

account ||--|| client
connection }|--o{ client
account }o--|{ transaction
role ||--|{ client
role ||--o{ authority

@enduml